--- a/UserService/build.gradle
+++ b/UserService/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java
 	implementation group: 'com.sendgrid', name: 'sendgrid-java', version: '4.10.2'
 
+	// https://mvnrepository.com/artifact/com.datastax.oss/java-driver-core
+	implementation group: 'com.datastax.oss', name: 'java-driver-core', version: '4.17.0'
+
 }
 
 tasks.named('test') {
