--- a/GatewayService/build.gradle
+++ b/GatewayService/build.gradle
@@ -15,6 +15,16 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "2023.0.0")
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -28,9 +38,7 @@ dependencies {
 	implementation 'com.datastax.oss:java-driver-core:4.13.0'
 	implementation 'com.datastax.astra:astra-spring-boot-starter:0.1.13'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	
-	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-zuul
-	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-zuul', version: '2.2.10.RELEASE'
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 
 	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-cassandra
 	implementation group: 'org.springframework.data', name: 'spring-data-cassandra', version: '4.2.3'
