--- a/GatewayService/src/main/resources/application.properties
+++ b/GatewayService/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 spring.mail.password=SG.yourSendGridApiKey
+
+# Kafka Configuration
+kafka.bootstrapServers=127.0.0.1:9092
