--- a/PaymentService/application.yml
+++ b/PaymentService/application.yml
@@ -2,14 +2,9 @@ server:
   port: 8080
 
 spring:
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-    loadbalancer:
-      ribbon:
-        enabled: false
+  application:
+    name: payment-service
+
 eureka:
   client:
     serviceUrl:
