Expand GatewayService to proxy multiple downstream services

--- a/GatewayService/src/main/resources/application.properties
+++ b/GatewayService/src/main/resources/application.properties
@@ -14,5 +14,11 @@ spring.mail.password=SG.yourSendGridApiKey
 # Kafka Configuration
 kafka.bootstrapServers=127.0.0.1:9092
 
-# Playlist Service
+# Downstream Service Base URLs
+admin.service.base-url=lb://admin-service
+feed.service.base-url=lb://feed-service
+like.service.base-url=lb://like-service
+music.service.base-url=lb://music-service
+payment.service.base-url=lb://payment-service
 playlist.service.base-url=lb://playlist-service
+user.service.base-url=lb://user-service
