--- a/GatewayService/build.gradle
+++ b/GatewayService/build.gradle
@@ -55,7 +55,14 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
 	implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '3.1.2'
 
+	// For general Jakarta Persistence API usage
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 
+	// by the 'spring-boot-starter-data-jpa' dependency:
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// Example Hibernate implementation
+	implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
 }
 
 tasks.named('test') {
