--- a/MediaService/build.gradle
+++ b/MediaService/build.gradle
@@ -22,8 +22,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
 
+	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-cassandra
+	implementation group: 'org.springframework.data', name: 'spring-data-cassandra', version: '4.2.3'
+
+	// https://mvnrepository.com/artifact/com.stripe/stripe-java
+	implementation group: 'com.stripe', name: 'stripe-java', version: '24.17.0-beta.1'
+
+	// https://mvnrepository.com/artifact/org.apache.kafka/kafka
+	implementation group: "org.apache.kafka", name: 'kafka_2.13', version: '3.6.1'
+
+	// https://mvnrepository.com/artifact/com.sendgrid/sendgrid-java
+	implementation group: 'com.sendgrid', name: 'sendgrid-java', version: '4.10.2'
+
+	// https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
+	implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '3.1.2'
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
